testsuite/c_test/enhancec_test/ENC0133-inline_boundary_check_boundaryless_return_err/inline_boundary_check_boundaryless_return_err.c
/*
 * Copyright (c) [2020-2022] Huawei Technologies Co.,Ltd.All rights reserved.
 *
 * OpenArkCompiler is licensed under Mulan PSL v2.
 * You can use this software according to the terms and conditions of the Mulan PSL v2.
 * You may obtain a copy of Mulan PSL v2 at:
 *
 *     http://license.coscl.org.cn/MulanPSL2
 *
 * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER
 * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR
 * FIT FOR A PARTICULAR PURPOSE.
 * See the Mulan PSL v2 for more details.
 */



#include <stdio.h>
#include <stdlib.h>

__attribute__((returns_count(2)))
int* func() {
  int *p;
  return p; // CHECK: [[# @LINE ]] error: boundaryless pointer returned from func that requires a boundary pointer
}

int main() {
  int p = func();
  return 0;
}

